--- a/HW_MyHomework/HW_MyHomework.csproj
+++ b/HW_MyHomework/HW_MyHomework.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="hw02_LoanReport.cs">
+    <Compile Include="hw02\hw02_LoanReport.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hw02_LoanReport.Designer.cs">
+    <Compile Include="hw02\hw02_LoanReport.Designer.cs">
       <DependentUpon>hw02_LoanReport.cs</DependentUpon>
     </Compile>
-    <Compile Include="hw02_LoanMain.cs">
+    <Compile Include="hw02\hw02_LoanMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hw02_LoanMain.Designer.cs">
+    <Compile Include="hw02\hw02_LoanMain.Designer.cs">
       <DependentUpon>hw02_LoanMain.cs</DependentUpon>
     </Compile>
     <Compile Include="hw01_Hello.cs">
@@ -72,13 +72,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="hw02_LoanMain.resx">
+    <EmbeddedResource Include="hw02\hw02_LoanMain.resx">
       <DependentUpon>hw02_LoanMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="hw01_Hello.resx">
       <DependentUpon>hw01_Hello.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="hw02_LoanReport.resx">
+    <EmbeddedResource Include="hw02\hw02_LoanReport.resx">
       <DependentUpon>hw02_LoanReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
