update ClassSwitch & hw GuessInterface

--- a/HW_MyHomework/HW_MyHomework.csproj
+++ b/HW_MyHomework/HW_MyHomework.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hw_E1_guessGuesser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hw_E1_guessGuesser.Designer.cs">
+      <DependentUpon>hw_E1_guessGuesser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="hw_E1_guessMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="hw_E1_guessMain.Designer.cs">
+      <DependentUpon>hw_E1_guessMain.cs</DependentUpon>
+    </Compile>
     <Compile Include="hw02\hw02_LoanReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +92,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="hw02\hw02_LoanReport.resx">
       <DependentUpon>hw02_LoanReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="hw_E1_guessGuesser.resx">
+      <DependentUpon>hw_E1_guessGuesser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="hw_E1_guessMain.resx">
+      <DependentUpon>hw_E1_guessMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
