--- a/HW_MyHomework/HW_MyHomework.csproj
+++ b/HW_MyHomework/HW_MyHomework.csproj
@@ -47,16 +47,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Utility.cs" />
-    <Compile Include="hw_E1_guessGuesser.cs">
+    <Compile Include="hw_E1_guessNum\hw_E1_guessGuesser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hw_E1_guessGuesser.Designer.cs">
+    <Compile Include="hw_E1_guessNum\hw_E1_guessGuesser.Designer.cs">
       <DependentUpon>hw_E1_guessGuesser.cs</DependentUpon>
     </Compile>
-    <Compile Include="hw_E1_guessMain.cs">
+    <Compile Include="hw_E1_guessNum\hw_E1_guessMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="hw_E1_guessMain.Designer.cs">
+    <Compile Include="hw_E1_guessNum\hw_E1_guessMain.Designer.cs">
       <DependentUpon>hw_E1_guessMain.cs</DependentUpon>
     </Compile>
     <Compile Include="hw02\hw02_LoanReport.cs">
@@ -94,10 +94,10 @@
     <EmbeddedResource Include="hw02\hw02_LoanReport.resx">
       <DependentUpon>hw02_LoanReport.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="hw_E1_guessGuesser.resx">
+    <EmbeddedResource Include="hw_E1_guessNum\hw_E1_guessGuesser.resx">
       <DependentUpon>hw_E1_guessGuesser.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="hw_E1_guessMain.resx">
+    <EmbeddedResource Include="hw_E1_guessNum\hw_E1_guessMain.resx">
       <DependentUpon>hw_E1_guessMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainForm.resx">
